<resources>
    <string name="app_name">Genshin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="A_1">Ascension 1 (20/40)</string>
    <string name="A_2">Ascension 2 (40/50)</string>
    <string name="A_3">Ascension 3 (50/60)</string>
    <string name="A_4">Ascension 4 (60/70)</string>
    <string name="A_5">Ascension 5 (70/80)</string>
    <string name="A_6">Ascension 6 (80/90)</string>
    <string-array name="ascension_list">
        <item>Ascension 1 (20/40)</item>
        <item>Ascension 2 (40/50)</item>
        <item>Ascension 3 (50/60)</item>
        <item>Ascension 4 (60/70)</item>
        <item>Ascension 5 (70/80)</item>
        <item>Ascension 6 (80/90)</item>
    </string-array>
</resources>